syntax = "proto3";
package pb;

service QRService {
    rpc CreateQRCode(CreateQRRequest) returns (CreateQRResponse);
}

enum QRSubjectTypes {
    QR_CREATED = 0;
}

message CreateQRRequest {
    string ID = 1;
    string DataString = 2;
}


message CreateQRResponse {
    string Error = 1;
    bytes QRCode = 2;
}

message QRCreatedEvent {
    string ID = 1;
    bytes QRCode = 2;
}

